# amtrak-api

./: Cargo.toml  README.md  amtrak-api.code-workspace
.github/workflows/: ci.yml  live_endpoint.yml  update-dependancies.yml
examples/: filter_stations.rs  filter_trains.rs  single_station.rs  single_train.rs
src/: client.rs  errors.rs  lib.rs  responses.rs
tests/: live_endpoint.rs  live_endpoint_canary.rs  station.rs  train.rs
