[package]
name = "amtrak-api"
version = "0.2.0"
edition = "2021"
description = "Amtrak Async Rust API Client"
keywords = ["amtrak", "api", "public-transit", "train"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/amtrak-api/"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "MIT"

include = [
    "/src/**/*.rs",
    "/examples/*.rs",
    "/README.md", 
    "/LICENSE"
]

[features]
serde_debugging = ["dep:serde_path_to_error"]

[dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
serde_path_to_error = { version = "0.1.17", optional = true }

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"

[[example]]
name = "filter_stations"
crate-type = ["bin"]

[[example]]
name = "filter_trains"
crate-type = ["bin"]

[[example]]
name = "single_station"
crate-type = ["bin"]

[[example]]
name = "single_train"
crate-type = ["bin"]
